@@ -1,56 +1,29 @@
-import java.util.*;
+package main.java.org.example;
 
-public class Student {
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
 
-    private final String name;
-
-    private final List<Book> books = new ArrayList<>();
-
-    public Student(String name) {
-        this.name = name;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public List<Book> getBooks() {
-        return books;
-    }
-
-    public Student addBooks(List<Book> books) {
-        this.books.addAll(books);
-        return this;
-    }
-
-    @Override
-    public String toString() {
-        return "Студент: " +
-                name +
-                "\nСписок книг: " +
-                books +
-                "\n";
-    }
-
+public class Main {
     public static void main(String[] args) {
 
         List<Student> students = Arrays.asList(
 
-                new Student("Вася Пупкин").addBooks(Arrays.asList(
+                new Student("Вася Пупкин").addBooks(List.of(
                         new Book("Фёдор Достоевский", "Преступление и наказание", 1866, 656),
                         new Book("Лев Толстой", "Война и мир", 1869, 1216),
                         new Book("Михаил Булгаков", "Мастер и Маргарита", 1967, 496),
                         new Book("Александр Пушкин", "Евгений Онегин", 1837, 384),
                         new Book("Антон Чехов", "Вишнёвый сад", 1904, 112))),
 
-                new Student("Елена Малышева").addBooks(Arrays.asList(
+                new Student("Елена Малышева").addBooks(List.of(
                         new Book("Джордж Оруэлл", "1984", 1949, 320),
                         new Book("Эрнест Хемингуэй", "Старик и море", 1952, 128),
                         new Book("Франц Кафка", "Процесс", 1925, 368),
                         new Book("Стивен Кинг", "Оно", 1986, 1138),
                         new Book("Харуки Мураками", "Норвежский лес", 1987, 416))),
 
-                new Student("Герольд Румянов").addBooks(Arrays.asList(
+                new Student("Герольд Румянов").addBooks(List.of(
                         new Book("Борис Акунин", "Азазель", 1998, 384),
                         new Book("Дэн Браун", "Код да Винчи", 2003, 454),
                         new Book("Виктор Пелевин", "Generation", 1999, 384),
@@ -72,18 +45,4 @@ public class Student {
                 .ifPresentOrElse(year -> System.out.println("Год выпуска первой книги: " + year), () -> System.out.println("Не найдено подходящей книги"));
 
     }
-}
-
-record Book(String author, String title, Integer yearRelease, Integer pages) {
-
-    @Override
-    public String toString() {
-        return "{" +
-                "Автор: '" + author + "', " +
-                "Название: '" + title + "', " +
-                "Год издания: " + yearRelease + ", " +
-                "Кол-во страниц: " + pages +
-                '}';
-    }
-
 }
